--- a/Dockerfile-jenkins
+++ b/Dockerfile-jenkins
@@ -1,7 +1,8 @@
 FROM jenkins/jenkins:2.347-jdk11
 
 USER jenkins
-RUN jenkins-plugin-cli --plugins blueocean:1.25.5 build-timestamp:1.0.3 timestamper:1.17 pollscm:1.3.1 github-api:1.303-400.v35c2d8258028
+COPY plugins.txt /home/dgamorim/development/cd4ml/plugins.txt
+RUN /usr/local/bin/install-plugins.sh < /home/dgamorim/development/cd4ml/plugins.txt
 
 USER root
 ENV FLUENTD_HOST "fluentd"
